# define how the TEXI is converted to HTML with the specific CSS
# and syntax highlighting used for code samples.
AM_MAKEINFOHTMLFLAGS = --no-split --css-include=demo_C-h_S.css \
	-D 'HIGHLIGHT_SYNTAX_DEFAULT 1' \
	--init-file=/usr/share/texinfo/init/highlight_syntax.pm

info_TEXINFOS = demo.texi

demo_TEXINFOS = \
	gpl.texi \
	changelog.texi \
	demo_C-h_S.css
